倒计时自定义控件

--- a/democustom/app/src/main/AndroidManifest.xml
+++ b/democustom/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DhuaActivity"></activity>
+        <activity android:name=".DhuaActivity" />
+        <activity android:name=".DJiShiActivity"></activity>
     </application>
 
 </manifest>
