--- a/democustom/app/src/main/AndroidManifest.xml
+++ b/democustom/app/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.custom.myapplication">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DhuaActivity" />
-        <activity android:name=".DJiShiActivity"></activity>
+        <activity android:name=".DJiShiActivity" />
+        <activity android:name=".JSonceshActivity"></activity>
     </application>
 
 </manifest>
