--- a/democustom/app/build.gradle
+++ b/democustom/app/build.gradle
@@ -22,5 +22,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
+    compile 'com.lzy.net:okgo:3.0.4'
+    compile 'com.blankj:utilcode:1.7.1'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
